did selection sort , binary search and a little bit of merge sort

--- a/python-recap/python_recap.ipynb
+++ b/python-recap/python_recap.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "d16d5943",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "dd92c74b",
    "metadata": {},
    "outputs": [
@@ -108,8 +108,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "id": "217acf8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#binary search recursive\n",
+    "\n",
+    "def binary_search(list_ , value , flag_iterative_recursive = False):\n",
+    "    if flag_iterative_recursive :\n",
+    "        \n",
+    "        left  , right = 0 , len(list_) - 1 \n",
+    "        while(left <= right):\n",
+    "            \n",
+    "            mid =  (left+right)//2\n",
+    "            \n",
+    "            if list_[mid] == value:\n",
+    "                return True\n",
+    "            \n",
+    "            elif list_[mid] > value:\n",
+    "                right = mid - 1\n",
+    "                \n",
+    "            else:\n",
+    "                left = mid + 1\n",
+    "                \n",
+    "        return False        \n",
+    "    \n",
+    "    else:\n",
+    "        mid = len(list_)//2\n",
+    "        \n",
+    "        if len(list_) == 0:\n",
+    "            return False\n",
+    "        \n",
+    "        if list_[mid] == value:\n",
+    "            return True\n",
+    "        \n",
+    "        elif list_[mid] > value:\n",
+    "            return binary_search(list_[:mid] , value)\n",
+    "        \n",
+    "        elif list_[mid] < value:\n",
+    "            return binary_search(list_[mid+1:] , value)\n",
+    "        \n",
+    "        \n",
+    "print(binary_search([1,2,3,4] , 4 , flag_iterative_recursive=True))\n",
+    "            \n",
+    "        \n",
+    "    #iterative better better space cuz no stack space so O(1) space \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "10a42708",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "ye = [1,3]\n",
+    "\n",
+    "print(ye[len(ye)//2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "bcade191",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1//2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "40b38817",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#EXCEPTION HANDELING"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cece26b",
    "metadata": {},
    "outputs": [],
    "source": []
